--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,20 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
-    <title>Dragon Ball Finance</title>
+    <title>Mountain DeFi Finance</title>
     <meta
       name="description"
-      content="Cheaper and faster than Uniswap? Discover Dragon Ball Finance, the leading DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for DBALL."
+      content="Cheaper and faster than Uniswap? Discover Mountain DeFi Finance, the leading DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for coal."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="twitter:image" content="%PUBLIC_URL%/images/egg/hero.png" />
     <meta
       name="twitter:description"
-      content="The first Dragon Ball DeFi Platform on the Binance Smart Chain"
+      content="The first Mountain DeFi DeFi Platform on the Binance Smart Chain"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="🐲 Dragon Ball Finance - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
+    <meta name="twitter:title" content="🐲 Mountain DeFi Finance - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
