--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       content="The first Mountain DeFi DeFi Platform on the Binance Smart Chain"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="🐲 Mountain DeFi Finance - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
+    <meta name="twitter:title" content=" Mountain DeFi Finance - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
